--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Lorem ipsum"
+title                    : "Mengzhu Wang"
 description              : "Rendering engine programmer"
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "mzwang34/mzwang34.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
