--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,9 +6,6 @@ main:
   # - title: "News"
   #   url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
-
   # - title: "Honors and Awards"
   #   url: "/#-honors-and-awards"
 
@@ -18,8 +15,11 @@ main:
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Experiences"
+    url: "/#-experiences"
+
+  - title: "Publications"
+    url: "/#-publications"
 
   - title: "Projects"
     url: "/#-projects"
