--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Mengzhu Wang"
   avatar           : "images/avatar3.png"
   bio              : "Saarland University"
-  location         : "Hangzhou, China"
+  location         : "Saarbrücken, Germany"
   employer         :
   pubmed           : 
   # googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
